add section works

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zxx">
 <head>
   <meta charset="UTF-8">
 
@@ -93,7 +93,7 @@
           <li class="services__item">
             <h3 class="title title__services">Branding</h3>
             <p class="services__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt.</p>
-            <a href="" class="services__link">Read more</a>
+            <a href="" class="button">Read more</a>
             <div class="services__wrapper-image">
               <img class="services__image" src="images/dest/services_bg_1.png" alt="">
             </div>
@@ -101,7 +101,7 @@
           <li class="services__item">
             <h3 class="title title__services">Design</h3>
             <p class="services__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt.</p>
-            <a href="" class="services__link">Read more</a>
+            <a href="" class="button">Read more</a>
             <div class="services__wrapper-image">
               <img class="services__image" src="images/dest/services_bg_2.png" alt="">
             </div>
@@ -109,7 +109,7 @@
           <li class="services__item">
             <h3 class="title title__services">Development</h3>
             <p class="services__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt.</p>
-            <a href="" class="services__link">Read more</a>
+            <a href="" class="button">Read more</a>
             <div class="services__wrapper-image">
               <img class="services__image" src="images/dest/services_bg_3.png" alt="">
             </div>
@@ -118,6 +118,169 @@
 
       </div>
       
+    </section>
+
+    <section class="section section--padding-0 container">
+
+      <div class="works">
+
+        <div class="works__header">
+          <h2 class="title">Latest Works</h2>
+          <ul class="tabs">
+            <li class="tabs__item"><button class="tab" data-section="all">All</button></li>
+            <li class="tabs__item"><button class="tab" data-section="design">Web design</button></li>
+            <li class="tabs__item"><button class="tab" data-section="branding">Branding</button></li>
+            <li class="tabs__item"><button class="tab" data-section="photography">Photography</button></li>
+            <li class="tabs__item"><button class="tab" data-section="illustration">Illustration</button></li>
+          </ul>
+        </div>
+
+        <div class="works__item" data-section="photography">
+          <img src="images/dest/works_3.jpg" alt="" class="works__image">
+          <b class="works__slogan">100 years<br>photography</b>
+          <div class="works__wrapper">
+            <h3 class="works__title">Photography</h3>
+            <p class="works__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+            <a href="" class="button works__button">Read more</a>
+          </div>
+        </div>
+
+        <div class="works__item" data-section="photography">
+          <img src="images/dest/works_1.jpg" alt="" class="works__image">
+          <b class="works__slogan">A kitten`s<br>life</b>
+          <div class="works__wrapper">
+            <h3 class="works__title">Photography</h3>
+            <p class="works__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+            <a href="" class="button works__button">Read more</a>
+          </div>
+        </div>
+
+        <div class="works__item" data-section="photography">
+          <img src="images/dest/works_4.jpg" alt="" class="works__image">
+          <b class="works__slogan">Groovemade<br>products for mac</b>
+          <div class="works__wrapper">
+            <h3 class="works__title">Photography</h3>
+            <p class="works__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+            <a href="" class="button works__button">Read more</a>
+          </div>
+        </div>
+
+        <div class="works__item" data-section="photography">
+          <img src="images/dest/works_2.jpg" alt="" class="works__image">
+          <b class="works__slogan">Apple`s<br>lost magic</b>
+          <div class="works__wrapper">
+            <h3 class="works__title">Photography</h3>
+            <p class="works__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+            <a href="" class="button works__button">Read more</a>
+          </div>
+        </div>
+
+        <div class="works__item" data-section="design">
+          <img src="images/dest/works_5.jpg" alt="" class="works__image">
+          <b class="works__slogan">Apple`s<br>lost magic</b>
+          <div class="works__wrapper">
+            <h3 class="works__title">Web design</h3>
+            <p class="works__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+            <a href="" class="button works__button">Read more</a>
+          </div>
+        </div>
+
+        <div class="works__item" data-section="design">
+          <img src="images/dest/works_6.jpg" alt="" class="works__image">
+          <b class="works__slogan">Apple`s<br>lost magic</b>
+          <div class="works__wrapper">
+            <h3 class="works__title">Web design</h3>
+            <p class="works__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+            <a href="" class="button works__button">Read more</a>
+          </div>
+        </div>
+
+        <div class="works__item" data-section="design">
+          <img src="images/dest/works_7.jpg" alt="" class="works__image">
+          <b class="works__slogan">Apple`s<br>lost magic</b>
+          <div class="works__wrapper">
+            <h3 class="works__title">Web design</h3>
+            <p class="works__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+            <a href="" class="button works__button">Read more</a>
+          </div>
+        </div>
+
+        <div class="works__item" data-section="branding">
+          <img src="images/dest/works_8.jpg" alt="" class="works__image">
+          <b class="works__slogan">Apple`s<br>lost magic</b>
+          <div class="works__wrapper">
+            <h3 class="works__title">Branding</h3>
+            <p class="works__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+            <a href="" class="button works__button">Read more</a>
+          </div>
+        </div>
+
+        <div class="works__item" data-section="branding">
+          <img src="images/dest/works_9.jpg" alt="" class="works__image">
+          <b class="works__slogan">Apple`s<br>lost magic</b>
+          <div class="works__wrapper">
+            <h3 class="works__title">Branding</h3>
+            <p class="works__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+            <a href="" class="button works__button">Read more</a>
+          </div>
+        </div>
+
+        <div class="works__item" data-section="branding">
+          <img src="images/dest/works_10.jpg" alt="" class="works__image">
+          <b class="works__slogan">Apple`s<br>lost magic</b>
+          <div class="works__wrapper">
+            <h3 class="works__title">Branding</h3>
+            <p class="works__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+            <a href="" class="button works__button">Read more</a>
+          </div>
+        </div>
+
+        <div class="works__item" data-section="branding">
+          <img src="images/dest/works_11.jpg" alt="" class="works__image">
+          <b class="works__slogan">Apple`s<br>lost magic</b>
+          <div class="works__wrapper">
+            <h3 class="works__title">Branding</h3>
+            <p class="works__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+            <a href="" class="button works__button">Read more</a>
+          </div>
+        </div>
+
+        <div class="works__item" data-section="illustration">
+          <img src="images/dest/works_12.jpg" alt="" class="works__image">
+          <b class="works__slogan">Apple`s<br>lost magic</b>
+          <div class="works__wrapper">
+            <h3 class="works__title">Illustration</h3>
+            <p class="works__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+            <a href="" class="button works__button">Read more</a>
+          </div>
+        </div>
+
+        <div class="works__item" data-section="illustration">
+          <img src="images/dest/works_13.jpg" alt="" class="works__image">
+          <b class="works__slogan">Apple`s<br>lost magic</b>
+          <div class="works__wrapper">
+            <h3 class="works__title">Illustration</h3>
+            <p class="works__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+            <a href="" class="button works__button">Read more</a>
+          </div>
+        </div>
+
+        <div class="works__item" data-section="illustration">
+          <img src="images/dest/works_14.jpg" alt="" class="works__image">
+          <b class="works__slogan">Apple`s<br>lost magic</b>
+          <div class="works__wrapper">
+            <h3 class="works__title">Illustration</h3>
+            <p class="works__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+            <a href="" class="button works__button">Read more</a>
+          </div>
+        </div>
+
+        <div class="works__wrapper-button">
+          <button class="button works__button-show">View more</button>
+        </div>
+
+      </div>
+
     </section>
 
   </main>
