--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
 
         <div class="works__item" data-section="design">
           <img src="images/dest/works_5.jpg" alt="" class="works__image">
-          <b class="works__slogan">Apple`s<br>lost magic</b>
+          <b class="works__slogan">Design<br>effects</b>
           <div class="works__wrapper">
             <h3 class="works__title">Web design</h3>
             <p class="works__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
@@ -187,7 +187,7 @@
 
         <div class="works__item" data-section="design">
           <img src="images/dest/works_6.jpg" alt="" class="works__image">
-          <b class="works__slogan">Apple`s<br>lost magic</b>
+          <b class="works__slogan">Design<br>prodigies</b>
           <div class="works__wrapper">
             <h3 class="works__title">Web design</h3>
             <p class="works__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
@@ -197,7 +197,7 @@
 
         <div class="works__item" data-section="design">
           <img src="images/dest/works_7.jpg" alt="" class="works__image">
-          <b class="works__slogan">Apple`s<br>lost magic</b>
+          <b class="works__slogan">Design<br>apple</b>
           <div class="works__wrapper">
             <h3 class="works__title">Web design</h3>
             <p class="works__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
@@ -207,7 +207,7 @@
 
         <div class="works__item" data-section="branding">
           <img src="images/dest/works_8.jpg" alt="" class="works__image">
-          <b class="works__slogan">Apple`s<br>lost magic</b>
+          <b class="works__slogan">Puma</b>
           <div class="works__wrapper">
             <h3 class="works__title">Branding</h3>
             <p class="works__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
@@ -217,7 +217,7 @@
 
         <div class="works__item" data-section="branding">
           <img src="images/dest/works_9.jpg" alt="" class="works__image">
-          <b class="works__slogan">Apple`s<br>lost magic</b>
+          <b class="works__slogan">Starbucks</b>
           <div class="works__wrapper">
             <h3 class="works__title">Branding</h3>
             <p class="works__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
@@ -227,7 +227,7 @@
 
         <div class="works__item" data-section="branding">
           <img src="images/dest/works_10.jpg" alt="" class="works__image">
-          <b class="works__slogan">Apple`s<br>lost magic</b>
+          <b class="works__slogan">Converse</b>
           <div class="works__wrapper">
             <h3 class="works__title">Branding</h3>
             <p class="works__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
@@ -237,7 +237,7 @@
 
         <div class="works__item" data-section="branding">
           <img src="images/dest/works_11.jpg" alt="" class="works__image">
-          <b class="works__slogan">Apple`s<br>lost magic</b>
+          <b class="works__slogan">Apple Inc.</b>
           <div class="works__wrapper">
             <h3 class="works__title">Branding</h3>
             <p class="works__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
@@ -247,7 +247,7 @@
 
         <div class="works__item" data-section="illustration">
           <img src="images/dest/works_12.jpg" alt="" class="works__image">
-          <b class="works__slogan">Apple`s<br>lost magic</b>
+          <b class="works__slogan">Apple`s<br>photos</b>
           <div class="works__wrapper">
             <h3 class="works__title">Illustration</h3>
             <p class="works__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
@@ -257,7 +257,7 @@
 
         <div class="works__item" data-section="illustration">
           <img src="images/dest/works_13.jpg" alt="" class="works__image">
-          <b class="works__slogan">Apple`s<br>lost magic</b>
+          <b class="works__slogan">Old<br>photos</b>
           <div class="works__wrapper">
             <h3 class="works__title">Illustration</h3>
             <p class="works__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
@@ -267,7 +267,7 @@
 
         <div class="works__item" data-section="illustration">
           <img src="images/dest/works_14.jpg" alt="" class="works__image">
-          <b class="works__slogan">Apple`s<br>lost magic</b>
+          <b class="works__slogan">Modern<br>photos</b>
           <div class="works__wrapper">
             <h3 class="works__title">Illustration</h3>
             <p class="works__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
@@ -278,6 +278,43 @@
         <div class="works__wrapper-button">
           <button class="button works__button-show">View more</button>
         </div>
+
+      </div>
+
+    </section>
+
+    <section class="section section--bg-gray">
+
+      <div class="container">
+
+        <h2 class="title">The Team</h2>
+
+        <ul class="team">
+          <li class="team__item">
+            <img src="images/dest/team_1.jpg" alt="" class="team__image">
+            <div class="team__wrapper">
+              <h3 class="team__name">Tom Jones</h3>
+              <span class="team__post">HR-manager</span>
+              <p class="team__text">Solve problems easily</p>
+            </div>
+          </li>
+          <li class="team__item">
+            <img src="images/dest/team_2.jpg" alt="" class="team__image">
+            <div class="team__wrapper">
+              <h3 class="team__name">Michael Fraup</h3>
+              <span class="team__post">Creative Director</span>
+              <p class="team__text">Create with simplicity in mind!</p>
+            </div>
+          </li>
+          <li class="team__item">
+            <img src="images/dest/team_3.jpg" alt="" class="team__image">
+            <div class="team__wrapper">
+              <h3 class="team__name">Tim Cahill</h3>
+              <span class="team__post">Designer</span>
+              <p class="team__text">Рave more imagination</p>
+            </div>
+          </li>
+        </ul>
 
       </div>
 
