add section comments

--- a/index.html
+++ b/index.html
@@ -320,10 +320,55 @@
 
     </section>
 
+    <div class="section container">
+      <div class="comments">
+        <!-- Additional required wrapper -->
+        <div class="swiper-wrapper">
+          <!-- Slides -->
+          <div class="swiper-slide comments__item">
+            <p class="comments__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+            <p class="comments__author">David James <span>/ Web Design</span></p>
+            <div class="comments__raiting">
+              <img src="images/dest/star.png" alt="" class="comments__star">
+              <img src="images/dest/star.png" alt="" class="comments__star">
+              <img src="images/dest/star.png" alt="" class="comments__star">
+              <img src="images/dest/star.png" alt="" class="comments__star">
+              <img src="images/dest/star.png" alt="" class="comments__star comments__star--opacity2">
+            </div>
+          </div>
+          <div class="swiper-slide comments__item">
+            <p class="comments__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+            <p class="comments__author">Camron Manning <span>/ Web Design</span></p>
+            <div class="comments__raiting">
+              <img src="images/dest/star.png" alt="" class="comments__star">
+              <img src="images/dest/star.png" alt="" class="comments__star">
+              <img src="images/dest/star.png" alt="" class="comments__star">
+              <img src="images/dest/star.png" alt="" class="comments__star">
+              <img src="images/dest/star.png" alt="" class="comments__star">
+            </div>
+          </div>
+          <div class="swiper-slide comments__item">
+            <p class="comments__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+            <p class="comments__author">Austen Turner <span>/ Web Design</span></p>
+            <div class="comments__raiting">
+              <img src="images/dest/star.png" alt="" class="comments__star">
+              <img src="images/dest/star.png" alt="" class="comments__star">
+              <img src="images/dest/star.png" alt="" class="comments__star">
+              <img src="images/dest/star.png" alt="" class="comments__star comments__star--opacity2">
+              <img src="images/dest/star.png" alt="" class="comments__star comments__star--opacity2">
+            </div>
+          </div>
+          ...
+        </div>
+
+        <div class="swiper-button-prev comments__navigation-button comments__navigation-button--prev"></div>
+        <div class="swiper-button-next comments__navigation-button comments__navigation-button--next"></div>
+      </div>
+    </div>
+
   </main>
 
   <script src="js/script.min.js"></script>
-
 
 </body>
 </html>
