add section group-links

--- a/index.html
+++ b/index.html
@@ -366,6 +366,24 @@
       </div>
     </div>
 
+    <div class="group-links">
+
+      <a href="#" class="group-links__link">
+        <div class="group-links__wrapper group-links__wrapper--work">
+          <b class="group-links__slogan">Want to work together?</b>
+          <p class="group-links__text">Amazing. Tell us about your project!</p>
+        </div>
+      </a>
+
+      <a href="#" class="group-links__link">
+        <div class="group-links__wrapper group-links__wrapper--contact">
+          <b class="group-links__slogan">Contact us</b>
+          <p class="group-links__text">Get in touch</p>
+        </div>
+      </a>
+
+    </div>
+
   </main>
 
   <script src="js/script.min.js"></script>
