add alt to images

--- a/index.html
+++ b/index.html
@@ -65,9 +65,9 @@
       <div class="about container">
 
         <div class="about__wrapper">
-          <div class="about__block about__block--left"><img src="images/dest/about_1.jpg" alt="" class="about__image"></div>
+          <div class="about__block about__block--left"><img src="images/dest/about_1.jpg" alt="the guy looks out the window" class="about__image"></div>
           <div class="about__block about__block--bg-green"></div>
-          <div class="about__block about__block--right"><img src="images/dest/about_2.jpg" alt="" class="about__image"></div>
+          <div class="about__block about__block--right"><img src="images/dest/about_2.jpg" alt="the guy is on the road" class="about__image"></div>
         </div>
 
         <div class="about__text-left">
@@ -95,7 +95,7 @@
             <p class="services__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt.</p>
             <a href="" class="button">Read more</a>
             <div class="services__wrapper-image">
-              <img class="services__image" src="images/dest/services_bg_1.png" alt="">
+              <img class="services__image" src="images/dest/services_bg_1.png" alt="branding">
             </div>
           </li>
           <li class="services__item">
@@ -103,7 +103,7 @@
             <p class="services__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt.</p>
             <a href="" class="button">Read more</a>
             <div class="services__wrapper-image">
-              <img class="services__image" src="images/dest/services_bg_2.png" alt="">
+              <img class="services__image" src="images/dest/services_bg_2.png" alt="design">
             </div>
           </li>
           <li class="services__item">
@@ -111,7 +111,7 @@
             <p class="services__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt.</p>
             <a href="" class="button">Read more</a>
             <div class="services__wrapper-image">
-              <img class="services__image" src="images/dest/services_bg_3.png" alt="">
+              <img class="services__image" src="images/dest/services_bg_3.png" alt="Development">
             </div>
           </li>
         </ul>
@@ -136,7 +136,7 @@
         </div>
 
         <div class="works__item" data-section="photography">
-          <img src="images/dest/works_3.jpg" alt="" class="works__image">
+          <img src="images/dest/works_3.jpg" alt="camera" class="works__image">
           <b class="works__slogan">100 years<br>photography</b>
           <div class="works__wrapper">
             <h3 class="works__title">Photography</h3>
@@ -146,7 +146,7 @@
         </div>
 
         <div class="works__item" data-section="photography">
-          <img src="images/dest/works_1.jpg" alt="" class="works__image">
+          <img src="images/dest/works_1.jpg" alt="cat" class="works__image">
           <b class="works__slogan">A kitten`s<br>life</b>
           <div class="works__wrapper">
             <h3 class="works__title">Photography</h3>
@@ -156,7 +156,7 @@
         </div>
 
         <div class="works__item" data-section="photography">
-          <img src="images/dest/works_4.jpg" alt="" class="works__image">
+          <img src="images/dest/works_4.jpg" alt="desktop with computer" class="works__image">
           <b class="works__slogan">Groovemade<br>products for mac</b>
           <div class="works__wrapper">
             <h3 class="works__title">Photography</h3>
@@ -166,7 +166,7 @@
         </div>
 
         <div class="works__item" data-section="photography">
-          <img src="images/dest/works_2.jpg" alt="" class="works__image">
+          <img src="images/dest/works_2.jpg" alt="MacBook" class="works__image">
           <b class="works__slogan">Apple`s<br>lost magic</b>
           <div class="works__wrapper">
             <h3 class="works__title">Photography</h3>
@@ -176,7 +176,7 @@
         </div>
 
         <div class="works__item" data-section="design">
-          <img src="images/dest/works_5.jpg" alt="" class="works__image">
+          <img src="images/dest/works_5.jpg" alt="desktop with computer" class="works__image">
           <b class="works__slogan">Design<br>effects</b>
           <div class="works__wrapper">
             <h3 class="works__title">Web design</h3>
@@ -186,7 +186,7 @@
         </div>
 
         <div class="works__item" data-section="design">
-          <img src="images/dest/works_6.jpg" alt="" class="works__image">
+          <img src="images/dest/works_6.jpg" alt="there are pencils on the table" class="works__image">
           <b class="works__slogan">Design<br>prodigies</b>
           <div class="works__wrapper">
             <h3 class="works__title">Web design</h3>
@@ -196,7 +196,7 @@
         </div>
 
         <div class="works__item" data-section="design">
-          <img src="images/dest/works_7.jpg" alt="" class="works__image">
+          <img src="images/dest/works_7.jpg" alt="desktop with computer" class="works__image">
           <b class="works__slogan">Design<br>apple</b>
           <div class="works__wrapper">
             <h3 class="works__title">Web design</h3>
@@ -206,7 +206,7 @@
         </div>
 
         <div class="works__item" data-section="branding">
-          <img src="images/dest/works_8.jpg" alt="" class="works__image">
+          <img src="images/dest/works_8.jpg" alt="sneakers Puma" class="works__image">
           <b class="works__slogan">Puma</b>
           <div class="works__wrapper">
             <h3 class="works__title">Branding</h3>
@@ -216,7 +216,7 @@
         </div>
 
         <div class="works__item" data-section="branding">
-          <img src="images/dest/works_9.jpg" alt="" class="works__image">
+          <img src="images/dest/works_9.jpg" alt="Coffee cup" class="works__image">
           <b class="works__slogan">Starbucks</b>
           <div class="works__wrapper">
             <h3 class="works__title">Branding</h3>
@@ -226,7 +226,7 @@
         </div>
 
         <div class="works__item" data-section="branding">
-          <img src="images/dest/works_10.jpg" alt="" class="works__image">
+          <img src="images/dest/works_10.jpg" alt="sneakers Converse" class="works__image">
           <b class="works__slogan">Converse</b>
           <div class="works__wrapper">
             <h3 class="works__title">Branding</h3>
@@ -236,7 +236,7 @@
         </div>
 
         <div class="works__item" data-section="branding">
-          <img src="images/dest/works_11.jpg" alt="" class="works__image">
+          <img src="images/dest/works_11.jpg" alt="computer Apple" class="works__image">
           <b class="works__slogan">Apple Inc.</b>
           <div class="works__wrapper">
             <h3 class="works__title">Branding</h3>
@@ -246,7 +246,7 @@
         </div>
 
         <div class="works__item" data-section="illustration">
-          <img src="images/dest/works_12.jpg" alt="" class="works__image">
+          <img src="images/dest/works_12.jpg" alt="comera, MacBook and IPhone" class="works__image">
           <b class="works__slogan">Apple`s<br>photos</b>
           <div class="works__wrapper">
             <h3 class="works__title">Illustration</h3>
@@ -256,7 +256,7 @@
         </div>
 
         <div class="works__item" data-section="illustration">
-          <img src="images/dest/works_13.jpg" alt="" class="works__image">
+          <img src="images/dest/works_13.jpg" alt="Old camera" class="works__image">
           <b class="works__slogan">Old<br>photos</b>
           <div class="works__wrapper">
             <h3 class="works__title">Illustration</h3>
@@ -266,7 +266,7 @@
         </div>
 
         <div class="works__item" data-section="illustration">
-          <img src="images/dest/works_14.jpg" alt="" class="works__image">
+          <img src="images/dest/works_14.jpg" alt="girl with a camera" class="works__image">
           <b class="works__slogan">Modern<br>photos</b>
           <div class="works__wrapper">
             <h3 class="works__title">Illustration</h3>
@@ -291,7 +291,7 @@
 
         <ul class="team">
           <li class="team__item">
-            <img src="images/dest/team_1.jpg" alt="" class="team__image">
+            <img src="images/dest/team_1.jpg" alt="Photo Tom Jones" class="team__image">
             <div class="team__wrapper">
               <h3 class="team__name">Tom Jones</h3>
               <span class="team__post">HR-manager</span>
@@ -299,7 +299,7 @@
             </div>
           </li>
           <li class="team__item">
-            <img src="images/dest/team_2.jpg" alt="" class="team__image">
+            <img src="images/dest/team_2.jpg" alt="Photo Michael Fraup" class="team__image">
             <div class="team__wrapper">
               <h3 class="team__name">Michael Fraup</h3>
               <span class="team__post">Creative Director</span>
@@ -307,7 +307,7 @@
             </div>
           </li>
           <li class="team__item">
-            <img src="images/dest/team_3.jpg" alt="" class="team__image">
+            <img src="images/dest/team_3.jpg" alt="Photo Tim Cahill" class="team__image">
             <div class="team__wrapper">
               <h3 class="team__name">Tim Cahill</h3>
               <span class="team__post">Designer</span>
@@ -329,33 +329,33 @@
             <p class="comments__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
             <p class="comments__author">David James <span>/ Web Design</span></p>
             <div class="comments__raiting">
-              <img src="images/dest/star.png" alt="" class="comments__star">
-              <img src="images/dest/star.png" alt="" class="comments__star">
-              <img src="images/dest/star.png" alt="" class="comments__star">
-              <img src="images/dest/star.png" alt="" class="comments__star">
-              <img src="images/dest/star.png" alt="" class="comments__star comments__star--opacity2">
+              <img src="images/dest/star.png" alt="raiting star" class="comments__star">
+              <img src="images/dest/star.png" alt="raiting star" class="comments__star">
+              <img src="images/dest/star.png" alt="raiting star" class="comments__star">
+              <img src="images/dest/star.png" alt="raiting star" class="comments__star">
+              <img src="images/dest/star.png" alt="raiting star" class="comments__star comments__star--opacity2">
             </div>
           </div>
           <div class="swiper-slide comments__item">
             <p class="comments__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
             <p class="comments__author">Camron Manning <span>/ Web Design</span></p>
             <div class="comments__raiting">
-              <img src="images/dest/star.png" alt="" class="comments__star">
-              <img src="images/dest/star.png" alt="" class="comments__star">
-              <img src="images/dest/star.png" alt="" class="comments__star">
-              <img src="images/dest/star.png" alt="" class="comments__star">
-              <img src="images/dest/star.png" alt="" class="comments__star">
+              <img src="images/dest/star.png" alt="raiting star" class="comments__star">
+              <img src="images/dest/star.png" alt="raiting star" class="comments__star">
+              <img src="images/dest/star.png" alt="raiting star" class="comments__star">
+              <img src="images/dest/star.png" alt="raiting star" class="comments__star">
+              <img src="images/dest/star.png" alt="raiting star" class="comments__star">
             </div>
           </div>
           <div class="swiper-slide comments__item">
             <p class="comments__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
             <p class="comments__author">Austen Turner <span>/ Web Design</span></p>
             <div class="comments__raiting">
-              <img src="images/dest/star.png" alt="" class="comments__star">
-              <img src="images/dest/star.png" alt="" class="comments__star">
-              <img src="images/dest/star.png" alt="" class="comments__star">
-              <img src="images/dest/star.png" alt="" class="comments__star comments__star--opacity2">
-              <img src="images/dest/star.png" alt="" class="comments__star comments__star--opacity2">
+              <img src="images/dest/star.png" alt="raiting star" class="comments__star">
+              <img src="images/dest/star.png" alt="raiting star" class="comments__star">
+              <img src="images/dest/star.png" alt="raiting star" class="comments__star">
+              <img src="images/dest/star.png" alt="raiting star" class="comments__star comments__star--opacity2">
+              <img src="images/dest/star.png" alt="raiting star" class="comments__star comments__star--opacity2">
             </div>
           </div>
           ...
