change section team

--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@
             <div class="team__wrapper">
               <h3 class="team__name">Michael Fraup</h3>
               <span class="team__post">Creative Director</span>
-              <p class="team__text">Create with simplicity in mind!</p>
+              <p class="team__text">Create with simplicity!</p>
             </div>
           </li>
           <li class="team__item">
